# PSF

./: .GITIGNORE  README.md  predict.py  pyproject.toml  requirements.txt  train.py  training.ipynb
config/: train.yaml  train_smoke.yaml  train_verify.yaml
experiments/: exp0_basis_fit.py
scripts/: generate_dataset.py  rebuild_manifests.py
src/basis/: __init__.py  gaussian.py  ghost.py  motion.py  ring.py  scatter.py
src/dataset/: __init__.py  dataset_generator.py  image_loader.py  metadata.py  parameter_sampler.py  patch_sampler.py
src/generator/: __init__.py  psf_generator.py
src/models/: __init__.py  resnet18_regressor.py
src/training/: __init__.py  dataloader.py  dataset.py  losses.py  metrics.py  trainer.py
src/visualization/: __init__.py  plot_psf.py
tests/: test_dataset_generator.py  test_exp0_basis_fit.py  test_gaussian.py  test_generator.py  test_ghost.py  test_motion.py  test_parameter_sampler.py  test_patch_sampler.py  test_ring.py  test_scatter.py  test_trainer_amp.py  test_training.py
