[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eoir-psf"
version = "0.1.0"
description = "Physics-constrained basis function PSF tools for EO/IR restoration experiments."
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "numpy<2",
    "scipy",
    "opencv-python",
    "matplotlib",
    "pillow",
    "pyyaml",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
